--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Log in to Alibaba Cloud Container Registry (ACR)
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.ALIYUN_NAME_SPACE}}
+          registry: ${{ env.ALIYUN_REGISTRY}}
           username: ${{ env.ALIYUN_REGISTRY_USER}}
           password: ${{ env.ALIYUN_REGISTRY_PASSWORD}}
 
