--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -87,8 +87,15 @@ jobs:
           export KUBE_BUILD_PLATFORMS=linux/amd64
           export KUBE_DOCKER_REGISTRY="${{ env.ALIYUN_REGISTRY }}/${{ env.ALIYUN_NAME_SPACE }}"
           export KUBE_DOCKER_IMAGE_TAG="${{ env.IMAGE_TAG }}"
+          # 使用您在 workflow_dispatch 中输入的 tag，或者 commit SHA 作为强制版本号
+          VERSION_TAG=${{ github.event.inputs.image_tag || format('git-{0}', github.sha) }}
+          echo "Forcing build version to: ${VERSION_TAG}"
 
+          KUBE_BUILD_PLATFORMS=linux/amd64 \
+          KUBE_DOCKER_REGISTRY="${{ secrets.ACR_REGISTRY }}/${{ env.ACR_NAMESPACE }}" \
+          KUBE_FASTBUILD=true \
           # 调用 Makefile 来构建单个组件的镜像
+          KUBE_GIT_VERSION="${VERSION_TAG}" \ # <-- 这是解决问题的关键一行！
           ./build/release-images.sh "${{ env.K8S_COMPONENT }}"
 
       # 步骤七：登出 ACR (安全起见)
