--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -90,7 +90,7 @@ jobs:
           # 构造一个符合 SemVer 规范的开发版本号
           # 格式: 0.0.0-dev.<commit_sha>
           # 这样既保证了唯一性，又符合 SemVer
-          VERSION_TAG="0.0.0-dev.${{ github.sha }}"
+          VERSION_TAG="0.0.0-dev+${GITHUB_SHA::7}"
           echo "Forcing build version to: ${VERSION_TAG}"
 
           KUBE_BUILD_PLATFORMS=linux/amd64 \
