--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -98,10 +98,12 @@ jobs:
           KUBE_FASTBUILD=true \
           KUBE_BUILD_PARALLEL=1 \
           ./build/release-images.sh "${{ env.K8S_COMPONENT }}"
+
       - name: Push The Final Image to ACR
         run: |
+          # 使用 env 变量构造最终的镜像名
           IMAGE_NAME="${{ env.ALIYUN_REGISTRY }}/${{ env.ALIYUN_NAME_SPACE }}/${{ env.K8S_COMPONENT }}"
-          IMAGE_TAG="${{ env.FINAL_IMAGE_TAG }}"
+          IMAGE_TAG="${{ env.IMAGE_TAG }}"
           
           echo "Pushing image: ${IMAGE_NAME}:${IMAGE_TAG}"
           docker push "${IMAGE_NAME}:${IMAGE_TAG}"
