--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -56,12 +56,12 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       # 步骤四：登录到阿里云 ACR
-      - name: Log in to Alibaba Cloud Container Registry (ACR)
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.ALIYUN_REGISTRY}}
-          username: ${{ env.ALIYUN_REGISTRY_USER}}
-          password: ${{ env.ALIYUN_REGISTRY_PASSWORD}}
+      # - name: Log in to Alibaba Cloud Container Registry (ACR)
+      #   uses: docker/login-action@v3
+      #   with:
+      #     registry: ${{ env.ALIYUN_REGISTRY}}
+      #     username: ${{ env.ALIYUN_REGISTRY_USER}}
+      #     password: ${{ env.ALIYUN_REGISTRY_PASSWORD}}
 
       # 步骤五：确定镜像标签
       - name: Determine Image Tag
@@ -80,7 +80,7 @@ jobs:
           echo "Starting build for ${{ env.K8S_COMPONENT }}..."
           echo "Target Registry: ${{ env.ALIYUN_REGISTRY }}/${{ env.ALIYUN_NAME_SPACE }}"
           echo "Image Tag: ${{ env.IMAGE_TAG }}"
-
+          docker login -u $ALIYUN_REGISTRY_USER -p $ALIYUN_REGISTRY_PASSWORD $ALIYUN_REGISTRY
          
           export KUBE_BUILD_PLATFORMS=linux/amd64
           export KUBE_DOCKER_REGISTRY="${{ env.ALIYUN_REGISTRY }}/${{ env.ALIYUN_NAME_SPACE }}"
