--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -98,13 +98,9 @@ jobs:
           KUBE_FASTBUILD=true \
           KUBE_BUILD_PARALLEL=1 \
           ./build/release-images.sh "${{ env.K8S_COMPONENT }}"
-
-      - name: Push The Final Image to ACR
-        run: |
-          # 使用 env 变量构造最终的镜像名
-          echo "Pushing image: ${{ env.ALIYUN_REGISTRY }}/${{ env.ALIYUN_NAME_SPACE }}/${{ env.K8S_COMPONENT }}:${{ env.IMAGE_TAG }}"
-          docker push "${{ env.ALIYUN_REGISTRY }}/${{ env.ALIYUN_NAME_SPACE }}/${{ env.K8S_COMPONENT }}":"${{ env.IMAGE_TAG }}"
+          docker push  $ALIYUN_REGISTRY/$ALIYUN_NAME_SPACE/${{ env.K8S_COMPONENT }}:${{ env.IMAGE_TAG }}
           echo "Image pushed successfully!"
+
 
       # 步骤七：登出 ACR (安全起见)
       - name: Logout from ACR
