--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -171,25 +171,34 @@ jobs:
         run: |
           echo "Building & Pushing kube-apiserver with tag ${{ env.KUBE_DOCKER_IMAGE_TAG }}"
           ./build/release-images.sh kube-apiserver
+          docker push  $ALIYUN_REGISTRY/$ALIYUN_NAME_SPACE/kube-apiserver-amd64:${{ env.IMAGE_TAG }}
+          echo "Image kube-apiserver pushed successfully!"
+
 
       - name: Build and Push kube-controller-manager
         if: needs.build-and-push.outputs.build-controller-manager == 'true'
         run: |
           echo "Building & Pushing kube-controller-manager with tag ${{ env.KUBE_DOCKER_IMAGE_TAG }}"
           ./build/release-images.sh kube-controller-manager
-
+          docker push  $ALIYUN_REGISTRY/$ALIYUN_NAME_SPACE/kube-controller-manager-amd64:${{ env.IMAGE_TAG }}
+          echo "Image kube-controller-manager pushed successfully!"
+          
       - name: Build and Push kube-scheduler
         if: needs.build-and-push.outputs.build-scheduler == 'true'
         run: |
           echo "Building & Pushing kube-scheduler with tag ${{ env.KUBE_DOCKER_IMAGE_TAG }}"
           ./build/release-images.sh kube-scheduler
+          docker push  $ALIYUN_REGISTRY/$ALIYUN_NAME_SPACE/kube-scheduler-amd64:${{ env.IMAGE_TAG }}
+          echo "Image kube-scheduler pushed successfully!"
 
       - name: Build and Push kube-proxy
         if: needs.build-and-push.outputs.build-proxy == 'true'
         run: |
           echo "Building & Pushing kube-proxy with tag ${{ env.KUBE_DOCKER_IMAGE_TAG }}"
           ./build/release-images.sh kube-proxy
-
+          docker push  $ALIYUN_REGISTRY/$ALIYUN_NAME_SPACE/kube-proxy-amd64:${{ env.IMAGE_TAG }}
+          echo "Image kube-proxy pushed successfully!"
+          
       - name: Logout from ACR
         if: always()
         run: docker logout ${{ env.ALIYUN_REGISTRY }}
